--- a/SnowFur/packages.config
+++ b/SnowFur/packages.config
@@ -11,10 +11,20 @@
   <package id="DotVVM.Owin" version="1.1.0-beta" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net452" />
+  <package id="Histrio" version="0.3.0.1" targetFramework="net461" />
+  <package id="Histrio.Net.Http" version="0.3.0.26" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net452" />
@@ -27,10 +37,12 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
